# Snaze_Smart

./: CMakeLists.txt  MakeLists.txt  README.md  author.md
data/: levels.txt
include/: level.h  player.h  snake.h  snakeGame.h
src/: level.cpp  player.cpp  snake.cpp  snakeGame.cpp
